# Learn-OpenGL

./: .gitignore  Cargo.toml
assets/rock/: rock.mtl
gl/: build.rs
shader_src/: adv_lighting_frag.glsl  blending_frag_shd.glsl  cubemap_frag_shd.glsl  cubemap_vertex_shd.glsl  custom_anti_aliasing_frag.glsl  depth_cubemap_geom.glsl  depth_testing_fragment_shd.glsl  depth_visualization_frag.glsl  draw_normals_geometry_shd.glsl  explode_effect_geometry_shd.glsl  fragment_shd_2.glsl  fragment_shd_3.glsl  geometry_shd_1.glsl  ib_vertex_shd.glsl  instancing_vertex_shd.glsl  model_fragment_shd.glsl  model_vertex_shd.glsl  normal_mapping.vrtx.glsl  point_shadows_frag.glsl  post_processing_frag_shd.glsl  shadow_mapping_frag.glsl  shadow_mapping_vrtx.glsl  ub_vertex_shd.glsl  ubo_vertex_shd.glsl  vertex_shd_2.glsl  vertex_shd_3.glsl
src/: camera.rs  lib.rs  load_tex.rs  main.rs  model.rs  shaders.rs  state_and_cfg.rs
src/draw/: adv_data_use.rs  adv_lighting.rs  antialiasing.rs  backpack.rs  blending.rs  cubemap.rs  cubes.rs  depth_texting.rs  face_culling.rs  framebuffers.rs  geometry_shader_use.rs  instancing.rs  lighting.rs  mod.rs  stencil_testing.rs  ubo_use.rs
src/draw/adv_lighting/: blinn_phong.rs  gamma_correction.rs  mod.rs  normal_mapping.rs  point_shadows.rs  shadow_mapping.rs
src/init/: load_model.rs  mod.rs  shd_prg.rs  tex.rs  var_loc.rs  vex.rs
src/process_input/: camera.rs  lighting.rs  mod.rs  post_processing.rs  shadows.rs  textures.rs  view.rs
src/shaders/: internal_shader_src.rs  mod.rs  shader_src.rs
src/state_and_cfg/: gl_data.rs  mod.rs
